# python-examples

./: .gitignore  Dockerfile  model_rfc.pkl
docker-uv-fastapi/: app_fastapi.py  pyproject.toml
docker-uv-flask/: Dockerfile  app_flask.py  main.py  model_build.py  pyproject.toml
docker-uv-flask/templates/: flask_app.html
llm-from-scratch/: llm-from-scratch.ipynb  pyproject.toml
mlflow-divein/: main.py  mlflow-auto-log.py  mlflow-get-started.py  mlflow-manual-log.py  mlflow-optuna.py  mlflow-resources.ipynb  pyproject.toml
polars-exploration/: _markdown_ipynb_toc.py  explore-polars.ipynb  pyproject.toml
templates/: flask_app.html
utils/: generic_utils.py  mlflow_utils.py
