[project]
name = "mlflow-divein"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "lightgbm>=4.6.0",
    "mlflow>=3.1.0",
    "numpy>=2.3.0",
    "optuna>=4.3.0",
    "pandas>=2.3.0",
    "polars>=1.30.0",
    "scikit-learn>=1.7.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
]
