[project]
name = "polars-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.1",
    "polars>=1.29.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "notebook>=7.4.2",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
]
